--- a/views/index_urls.ejs
+++ b/views/index_urls.ejs
@@ -16,6 +16,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
+          <th scope="col">Edit</th>
         </tr>
       </thead>
       <tbody>
@@ -24,6 +26,7 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td><form method="POST" action="/urls/<%=url%>/delete"><button type="submit" class="btn btn-primary">delete</button></form></td>
+            <td><form method="POST" action="/urls/<%=url%>"><button type="submit" class="btn btn-primary">edit</button></form></td>
           </tr>
         <% } %>
       </tbody>
