--- a/views/index_urls.ejs
+++ b/views/index_urls.ejs
@@ -26,7 +26,7 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td><form method="POST" action="/urls/<%=url%>/delete"><button type="submit" class="btn btn-primary">delete</button></form></td>
-            <td><form method="POST" action="/urls/<%=url%>"><button type="submit" class="btn btn-primary">edit</button></form></td>
+            <td><a href="/urls/<%=url%>"><button class="btn btn-primary">edit</button></a></td>
           </tr>
         <% } %>
       </tbody>
