adding final updates to login route and refactor of variable names

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,8 +11,8 @@
       </div>
     </div>
     <div>
-      <% if (username) { %>
-        <h5><%=username.email%> is logged in</h5>
+      <% if (userID) { %>
+        <h5><%=userID.email%> is logged in</h5>
         <form method="POST" action="/urls/logout"><button type="submit" class="btn btn-primary">Logout</button></form>
           <% } else { %>
             <a href="/login"><button class="btn btn-primary">login</button></a>
